fix: Implement image merging feature for specified group